--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/employee_info.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/employee_info.html
@@ -24,15 +24,15 @@
         <div class="form-row">
           <div class="form-group col-md-4">
             <label for="inputFstName">First Name</label>
-            <input type="text" class="form-control" id="inputFstName" name="inputFstName"value="{{a.First_name}}">
+            <input type="text" class="form-control" id="inputFstName" name="inputFstName"value="{{a.First_name}}"  required maxlength="255" pattern="[A-Za-z ]*">
           </div>
           <div class="form-group col-md-4">
             <label for="inputMidName">Middle Name</label>
-            <input type="text" class="form-control" id="inputMidName" name="inputMidName" value="{{a.Middle_name}}">
+            <input type="text" class="form-control" id="inputMidName" name="inputMidName" value="{{a.Middle_name}}" maxlength="255" pattern="[A-Za-z ]*">
           </div>
           <div class="form-group col-md-4">
             <label for="inputLtName">Last Name</label>
-            <input type="text" class="form-control" id="inputLtName" name="inputLtName" value="{{a.Last_name}}">
+            <input type="text" class="form-control" id="inputLtName" name="inputLtName" value="{{a.Last_name}}"  required maxlength="255" pattern="[A-Za-z ]*">
           </div>
           <div class="form-group col-md-6">
             <label for="inputPhone">Phone Number</label>
@@ -40,7 +40,7 @@
           </div>
           <div class="form-group col-md-6">
             <label for="inputEmail4">Email</label>
-            <input type="email" class="form-control" id="inputEmail4" name="inputEmail4" value="{{a.Email}}">
+            <input type="email" class="form-control" id="inputEmail4" name="inputEmail4" value="{{a.Email}}" required>
           </div>
         </div>
         <hr>
@@ -53,11 +53,11 @@
             </div>
             <div class="form-group col-md-2">
                 <label for="inputJoinDate">Join Date</label>
-                <input type="date" class="form-control" id="inputJoinDate" name="inputJoinDate" placeholder="{{a.Join_Date}}" value="{{a.Join_Date |date:'Y-m-d'}}">
+                <input type="date" class="form-control" id="inputJoinDate" name="inputJoinDate" placeholder="{{a.Join_Date}}" value="{{a.Join_Date |date:'Y-m-d'}}" required>
             </div>
             <div class="form-group col-md-3">
                 <label for="inputEmpStat">Contract Status</label>
-                <select id="inputEmpStat" name="inputEmpStat" class="form-control">
+                <select id="inputEmpStat" name="inputEmpStat" class="form-control" required>
                   <option selected value="{{a.Status}}">Currently: {{a.Status}}</option>
                   <option value="Hired">Hired</option>
                   <option value="Probationary">Probationary</option>
@@ -66,7 +66,7 @@
             </div>
             <div class="form-group col-md-3">
                 <label for="inputDept">Department</label>
-                <select id="inputDept" name="inputDept" class="form-control">
+                <select id="inputDept" name="inputDept" class="form-control" required>
                   <option selected value="{{a.Department}}">Currently: {{a.Department}}</option>
                   <option value="HR">HR</option>
                   <option value="IT">IT</option>
@@ -77,7 +77,7 @@
             
             <div class="form-group col-md-3">
                 <label for="inputPosition">Employee Position</label>
-                <input type="text" class="form-control" id="inputPosition" name="inputPosition" value="{{a.Role}}">
+                <input type="text" class="form-control" id="inputPosition" name="inputPosition" value="{{a.Role}}" pattern="[A-Za-z ]*" required>
             </div>
             
         </div>
@@ -87,11 +87,11 @@
         <div class="form-row">
             <div class="form-group col-md-4">
                 <label for="inputBankAccNo">Bank Account Number</label>
-                <input type="text" class="form-control" id="inputBankAccNo" name="inputBankAccNo" placeholder="" min='0' minlength='12' maxlength='1' value="{{a.BankNumber}}" required>
+                <input type="text" class="form-control" id="inputBankAccNo" name="inputBankAccNo" placeholder="" min='0' minlength='12' maxlength='1' value="{{a.BankNumber}}" minlength='12' maxlength='12' pattern="^00\d{10}$" required>
             </div>
             <div class="form-group col-md-4">
                 <label for="inputSalary">Salary</label>
-                <input type="number" class="form-control" id="inputSalary" name="inputSalary" value="{{a.Salary}}">
+                <input type="number" class="form-control" id="inputSalary" name="inputSalary" value="{{a.Salary}}" min='12200.00'>
             </div>
             <!---<div class="form-group col-md-4">
                 <label for="inputCOLA">COLA Earnings</label>
