--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/generate_page.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/generate_page.html
@@ -22,7 +22,7 @@
                     </div>
                     <div class="form-group col-md-2">
                         <label for="inputStartDate">Start Date</label>
-                        <input type="date" class="form-control" id="inputStartDate" name="inputStartDate" required>
+                        <input type="date" class="form-control" id="inputStartDate" name="inputStartDate" required readonly>
                     </div>
                     <div class="form-group col-md-2">
                         <label for="inputEndDate">End Date</label>
@@ -30,27 +30,27 @@
                     </div>
                     <div class="form-group col-md-1">
                         <label for="inputULD">ULD</label>
-                        <input type="number" class="form-control" id="inputULD" name="inputULD" required>
+                        <input type="number" class="form-control" id="inputULD" name="inputULD" min='0'required>
                     </div>
                     <div class="form-group col-md-1">
                         <label for="inputULDT">ULD - TYPE</label>
-                        <input type="text" class="form-control" id="inputULDT" name="inputULDT" required>
+                        <input type="text" class="form-control" id="inputULDT" name="inputULDT"  required>
                     </div>
                     <div class="form-group col-md-1">
                         <label for="inputCA">CA</label>
-                        <input type="number" class="form-control" id="inputCA" name="inputCA" required>
+                        <input type="number" class="form-control" id="inputCA" name="inputCA" min='0'required>
                     </div>
                     <div class="form-group col-md-1">
                         <label for="inputCOOP">COOP</label>
-                        <input type="number" class="form-control" id="inputCOOP" name="inputCOOP" required>
+                        <input type="number" class="form-control" id="inputCOOP" name="inputCOOP" min='0' required>
                     </div>
                     <div class="form-group col-md-1">
                         <label for="inputCOLA">COLA</label>
-                        <input type="number" class="form-control" id="inputCOLA" name="inputCOLA" required>
+                        <input type="number" class="form-control" id="inputCOLA" name="inputCOLA" min='0' required>
                     </div>
                     <div class="form-group col-md-1">
                         <label for="inputADDE">Additional </label>
-                        <input type="number" class="form-control" id="inputADDE" name="inputADDE" required>
+                        <input type="number" class="form-control" id="inputADDE" name="inputADDE" min='0' required>
                     </div>
                     <div class="form-group col-md-1">
                         <label for="inputADDET">Add'l - TYPE</label>
