--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/generate_page.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/generate_page.html
@@ -22,7 +22,7 @@
                     </div>
                     <div class="form-group col-md-2">
                         <label for="inputStartDate">Start Date</label>
-                        <input type="date" class="form-control" id="inputStartDate" name="inputStartDate" required readonly>
+                        <input type="date" class="form-control" id="inputStartDate" name="inputStartDate" required>
                     </div>
                     <div class="form-group col-md-2">
                         <label for="inputEndDate">End Date</label>
