--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/dashboard.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/dashboard.html
@@ -15,7 +15,7 @@
       <div class="card-deck">
         <div class="card">
           <div class="card-body">
-            <h1><i class="lni lni-user"></i></h1>
+            <h1><i class="lni lni-user" style="color:#861C1A"></i></h1>
             <h3>{{count_emp}}</h3>
             <p class="card-text">Number of Employees</p>
             <!--p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p-->
@@ -23,7 +23,7 @@
         </div>
         <div class="card">
           <div class="card-body">
-            <h1><i class="lni lni-ticket-alt"></i></h1>
+            <h1><i class="lni lni-ticket-alt" style="color:#861C1A"></i></h1>
             <h3>{{count_payrolls}}</h3>
             <p class="card-text">Payrolls Processed</p>
             <!--p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></-->
@@ -31,9 +31,9 @@
         </div>
         <div class="card">
           <div class="card-body">
-            <h1><i class="lni lni-hourglass"></i></h1>
+            <h1><i class="lni lni-hourglass" style="color:#861C1A"></i></h1>
             <h3>{{countdown}}</h3>
-            <p class="card-text">Days Until Next Payroll Deadline</p>
+            <p class="card-text"> Until Next Payroll Deadline</p>
             <!--p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p-->
           </div>
         </div>
