--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/payroll_breakdown.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/payroll_breakdown.html
@@ -12,6 +12,13 @@
         </div>
     </div>
     <hr>
+    {% for message in messages %}
+        <!--p class="{{ message.tags }}">{{ message }}</p-->
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+            <strong>Success!</strong> {{ message }}
+        </div>
+    {% endfor %}
+
     <div class="form-row">
         <div class="form-group col-md-2">
             <label for="inputID">ID Number</label>
@@ -47,17 +54,17 @@
             <tbody>
                 <tr>
                     <td>
-                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.Employee_ID.Salary|div:2}} readonly>
+                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.Employee_ID.Salary|div:2}} min='0'step='0.01' readonly required>
                     </td>
                     <td>
-                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.Employee_ID.Salary|mul:2|mul:12|div:314}} readonly>
+                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.Employee_ID.Salary|mul:2|mul:12|div:314}}  min='0'step='0.01' readonly required>
                     </td>
                     
                     <td>
-                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.AddtlEarning_Rate_ID.ADD_EARNINGS|add:payrolls.COLA_Rate_ID.COLA_Amount|add:payrolls.OT|add:payrolls.Holiday_Comp}} readonly>
+                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.AddtlEarning_Rate_ID.ADD_EARNINGS|add:payrolls.COLA_Rate_ID.COLA_Amount|add:payrolls.OT|add:payrolls.Holiday_Comp}} min='0'step='0.01' readonly>
                     </td>
                     <td>
-                        <input type="float" class="form-control" id="mth_yr" value="{{payrolls.Net_Pay|add:payrolls.Total_Deductions}}" readonly>
+                        <input type="float" class="form-control" id="mth_yr" value="{{payrolls.Net_Pay|add:payrolls.Total_Deductions}}"  min='0'step='0.01' readonly required>
                     </td>
                 </tr>
             </tbody>
@@ -77,25 +84,25 @@
             <tbody>
                 <tr>
                     <td>
-                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.Absence_Deductions}} readonly>
+                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.Absence_Deductions}} min='0'step='0.01' readonly required>
                     </td>
                     <td>
-                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.WTAX_Rate_ID}} readonly>
+                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.WTAX_Rate_ID}} min='0'step='0.01' readonly required>
                     </td>
                     <td><!--I am betting this basic bandaid module doesn't follow PEMDAS-->
-                            <input type="float" class="form-control" id="mth_yr" value={{payrolls.SSS_Rate_ID}} readonly>
+                            <input type="float" class="form-control" id="mth_yr" value={{payrolls.SSS_Rate_ID}} min='0'step='0.01' readonly required>
                     </td>
                     <td>
-                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.PhilHealth_Rate_ID}} readonly>
+                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.PhilHealth_Rate_ID}} min='0'step='0.01' readonly required>
                     </td>
                     <td>
-                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.HDMF_Rate_ID}} readonly>
+                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.HDMF_Rate_ID}} min='0'step='0.01' readonly required>
                     </td>
                     <td>
-                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.HMO_Rate_ID|add:payrolls.ULDeductions_Rate_ID.ULDeductions_Amount|add:payrolls.CA_Rate_ID.CA_Amount|add:payrolls.COOP_Rate_ID.COOP_Amount}} readonly>
+                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.HMO_Rate_ID|add:payrolls.ULDeductions_Rate_ID.ULDeductions_Amount|add:payrolls.CA_Rate_ID.CA_Amount|add:payrolls.COOP_Rate_ID.COOP_Amount}} min='0'step='0.01' readonly required>
                     </td>
                     <td>
-                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.Total_Deductions}} readonly>
+                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.Total_Deductions}} min='0'step='0.01' readonly required>
                     </td>
                 </tr>
             </tbody>
