--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/generate_page.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/generate_page.html
@@ -62,8 +62,8 @@
                 </div>
                 {% if messages %}
                     {% for message in messages %}
-                        <div class="alert alert-success alert-dismissible fade show mt-3" role="alert">
-                            <strong>Success!</strong> {{ message }}
+                        <div class="{{ message.tags }} fade show mt-3" role="alert">
+                            {{ message }}
                         </div>
                     {% endfor %}
                 {% endif %}
