--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/encode_page.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/encode_page.html
@@ -6,26 +6,24 @@
     <div class="content">
         <h1> Bank Payroll File Encoding</h1>
         {% if messages %}
-        {% for message in messages %}
+            {% for message in messages %}
+                <!-- If success message -->
+                {% if message.tags == 'success' %}
+                <div class="alert alert-success mt-2" role="alert">
+                    <strong>Success!</strong>
+                    {{ message }}
+                </div>
+                {% endif %}
 
-        <div class="alert alert-success alert-dismissible fade show" role="alert">
-          <strong>Success!</strong> {{ message }}
-        </div>
-        
-        <!--{% if messages.tags == 'success' %}
-        <div class="alert alert-success alert-dismissible fade show" role="alert">
-          <strong>Success!</strong> {{ message }}
-        </div>
+                <!-- If error message -->
+                {% if message.tags == 'error' %}
+                <div class="alert alert-danger mt-2" role="alert">
+                    <strong>Uh oh!</strong>
+                    {{ message }}
+                </div>
+                {% endif %}
+            {% endfor %}
         {% endif %}
-
-        {% if messages.tags == 'error' %}
-        <div class="alert alert-danger alert-dismissible fade show" role="alert">
-          <strong>Error!</strong> {{ message }}
-        </div>
-        {% endif %}-->
-
-        {% endfor %}
-      {% endif %}
         <div class="card">
             <div class="card-body">
                 <form method="POST" action="#">{% csrf_token %}
