--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/tax_module.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/tax_module.html
@@ -9,9 +9,21 @@
     <div>
         {% if messages %}
             {% for message in messages %}
-                <div class="alert alert-success alert-dismissible fade show mt-3" role="alert">
-                    <strong>Success!</strong> {{ message }}
+                <!-- If success message -->
+                {% if message.tags == 'success' %}
+                <div class="alert alert-success mt-2" role="alert">
+                    <strong>Success!</strong>
+                    {{ message }}
                 </div>
+                {% endif %}
+
+                <!-- If error message -->
+                {% if message.tags == 'error' %}
+                <div class="alert alert-danger mt-2" role="alert">
+                    <strong>Uh oh!</strong>
+                    {{ message }}
+                </div>
+                {% endif %}
             {% endfor %}
         {% endif %}
     </div>
