--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/payroll_breakdown.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/payroll_breakdown.html
@@ -67,17 +67,17 @@
             <tbody>
                 <tr>
                     <td>
-                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.Employee_ID.Salary|div:2}} min='0'step='0.01' readonly required>
+                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.Employee_ID.Salary|div:2|floatformat:2}} min='0'step='0.01' readonly required>
                     </td>
                     <td>
-                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.Employee_ID.Salary|mul:2|mul:12|div:314}}  min='0'step='0.01' readonly required>
+                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.Employee_ID.Salary|mul:2|mul:12|div:314|floatformat:2}}  min='0'step='0.01' readonly required>
                     </td>
                     
                     <td>
-                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.AddtlEarning_Rate_ID.ADD_EARNINGS|add:payrolls.COLA_Rate_ID.COLA_Amount|add:payrolls.OT|add:payrolls.Holiday_Comp}} min='0'step='0.01' readonly>
+                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.AddtlEarning_Rate_ID.ADD_EARNINGS|add:payrolls.COLA_Rate_ID.COLA_Amount|add:payrolls.OT|add:payrolls.Holiday_Comp|floatformat:2}} min='0'step='0.01' readonly>
                     </td>
                     <td>
-                        <input type="float" class="form-control" id="mth_yr" value="{{payrolls.Net_Pay|add:payrolls.Total_Deductions}}"  min='0'step='0.01' readonly required>
+                        <input type="float" class="form-control" id="mth_yr" value="{{payrolls.Net_Pay|add:payrolls.Total_Deductions|floatformat:2}}"  min='0'step='0.01' readonly required>
                     </td>
                 </tr>
             </tbody>
@@ -97,25 +97,25 @@
             <tbody>
                 <tr>
                     <td>
-                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.Absence_Deductions}} min='0'step='0.01' readonly required>
+                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.Absence_Deductions|floatformat:2}} min='0'step='0.01' readonly required>
                     </td>
                     <td>
-                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.WTAX_Rate_ID}} min='0'step='0.01' readonly required>
+                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.WTAX_Rate_ID|floatformat:2}} min='0'step='0.01' readonly required>
                     </td>
                     <td><!--I am betting this basic bandaid module doesn't follow PEMDAS-->
-                            <input type="float" class="form-control" id="mth_yr" value={{payrolls.SSS_Rate_ID}} min='0'step='0.01' readonly required>
+                            <input type="float" class="form-control" id="mth_yr" value={{payrolls.SSS_Rate_ID|floatformat:2}} min='0'step='0.01' readonly required>
                     </td>
                     <td>
-                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.PhilHealth_Rate_ID}} min='0'step='0.01' readonly required>
+                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.PhilHealth_Rate_ID|floatformat:2}} min='0'step='0.01' readonly required>
                     </td>
                     <td>
-                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.HDMF_Rate_ID}} min='0'step='0.01' readonly required>
+                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.HDMF_Rate_ID|floatformat:2}} min='0'step='0.01' readonly required>
                     </td>
                     <td>
-                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.HMO_Rate_ID|add:payrolls.ULDeductions_Rate_ID.ULDeductions_Amount|add:payrolls.CA_Rate_ID.CA_Amount|add:payrolls.COOP_Rate_ID.COOP_Amount}} min='0'step='0.01' readonly required>
+                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.HMO_Rate_ID|add:payrolls.ULDeductions_Rate_ID.ULDeductions_Amount|add:payrolls.CA_Rate_ID.CA_Amount|add:payrolls.COOP_Rate_ID.COOP_Amount|floatformat:2}} min='0'step='0.01' readonly required>
                     </td>
                     <td>
-                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.Total_Deductions}} min='0'step='0.01' readonly required>
+                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.Total_Deductions|floatformat:2}} min='0'step='0.01' readonly required>
                     </td>
                 </tr>
             </tbody>
@@ -129,7 +129,7 @@
             <tbody>
                 <tr>
                     <td>
-                        {{payrolls.Net_Pay}}
+                        {{payrolls.Net_Pay|floatformat:2}}
                     </td><!--input type="float" class="form-control" id="mth_yr" value={{payrolls.Net_pay}} readonly-->
                 </tr>
             </tbody>
