--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/login.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/login.html
@@ -36,12 +36,12 @@
                     <div class="form-group my-2">
                         <label for="userlogin">Username</label>
                         <input type="text" class="form-control" id="userlogin" name="userlogin"
-                            placeholder="Enter Username" required>
+                            placeholder="Enter Username" maxlength="20" required>
                     </div>
                     <div class="form-group my-2">
                         <label for="pwlogin">Password</label>
                         <input type="password" class="form-control" id="pwlogin" name="pwlogin"
-                            placeholder="Enter Password" required>
+                            placeholder="Enter Password" maxlength="20" required>
                     </div>
                     <div class="text-center">
                         <button class="btn my-2 btn-primary btn-block" type="submit">Log In</button>
