--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/payroll_breakdown.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/payroll_breakdown.html
@@ -74,7 +74,7 @@
                     </td>
                     
                     <td>
-                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.AddtlEarning_Rate_ID.ADD_EARNINGS|add:payrolls.COLA_Rate_ID.COLA_Amount|add:payrolls.OT|add:payrolls.Holiday_Comp|floatformat:2}} min='0'step='0.01' readonly>
+                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.NightShift|add:payrolls.OT|add:payrolls.AddtlEarning_Rate_ID.ADD_EARNINGS|add:payrolls.COLA_Rate_ID.COLA_Amount|add:payrolls.Holiday_Comp|floatformat:2}} min='0'step='0.01' readonly>
                     </td>
                     <td>
                         <input type="float" class="form-control" id="mth_yr" value="{{payrolls.Net_Pay|add:payrolls.Total_Deductions|floatformat:2}}"  min='0'step='0.01' readonly required>
