--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/employee_attendance.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/employee_attendance.html
@@ -57,8 +57,8 @@
               <tr>
                   <th style="width:15%">Date</th>
                   <!--th style="width:20%">Attendance Status</t-->
-                  <th style="width:5%">Leave</th>
-                  <th style="width:5%">Holiday</th>
+                  <!--<th style="width:5%">Leave</th>
+                  <th style="width:5%">Holiday</th>-->
                   <th style="width:15%">Time In</th>
                   <th style="width:15%">Time Out</th>
                   <th style="width:10%">Overtime Hours</th>
@@ -69,23 +69,40 @@
           <tbody>
               {% for x in attendance_record %}
               <tr>
-                  <td>{{x.Date}}</td>
-                  <td>
+                  <td>{{x.Date|date:"F j, Y (l)"}}</td>
+                 <!---- <td>
                     {{x.Leave_ID}}
                     <!--select id="inputDept" name="inputDept" class="form-control custom-select mr-sm-2">
                       <option selected>No</option>
                       <option>Yes</option>
-                    </select-->
+                    </select>
                   </td>
                   <td>
-                    {{x.Holiday_ID}}
+                    {{ x.Holiday_ID }}
                     <!--select id="inputDept" name="inputDept" class="form-control custom-select mr-sm-2">
                       <option selected>No</option>
                       <option>Yes</option>
-                    </select-->
+                    </select>
+                  </td>-->
+                  <td>{{x.TimeIn}}
+                    {% if x.TimeIn == None and x.TimeOut_2 != None %}
+                    {{x.TimeIn_2|time:"h a"}}
+                    {% else %}
+                    {{x.TimeIn}}
+                    {% endif %}
+
+
                   </td>
-                  <td>{{x.TimeIn}}</td>
-                  <td>{{x.TimeOut_2}}</td>
+                  <td>
+                    {% if x.TimeOut_2 == None and x.TimeIn != None %}
+                    {{x.TimeOut|time:"h a"}}
+                    {% else %}
+                    {{x.TimeOut_2}}
+                    {% endif %}
+
+
+
+                  </td>
                   <form method="POST" action="#">{% csrf_token %}
                     <input hidden value="{{x.History_ID}}" id="entryid" name="entryid"></input>
                       <td><input type="float" class="form-control" id="empOT" name="empOT" value=" {{x.OT}}" pattern="[0-4]" required></td>
