--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/settings.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/settings.html
@@ -6,7 +6,25 @@
 <div class="content">
     <h1> Settings Module </h1>
     <div id="resultDiv"></div>
-    
+    {% if messages %}
+        {% for message in messages %}
+          <!-- If success message -->
+          {% if message.tags == 'success' %}
+          <div class="alert alert-success mt-2" role="alert">
+              <strong>Success!</strong>
+              {{ message }}
+          </div>
+          {% endif %}
+
+          <!-- If error message -->
+          {% if message.tags == 'error' %}
+          <div class="alert alert-danger mt-2" role="alert">
+              <strong>Uh oh!</strong>
+              {{ message }}
+          </div>
+          {% endif %}
+        {% endfor %}
+      {% endif %}
     <div style="overflow-x:auto;">
         <table id="posts">
             <thead>
@@ -42,9 +60,9 @@
                             <td>
                             </td>
                             <td>
-                            {% if current_month == 1 %}
+                            
                                 <a class="btn btn-success" href={% url 'Reset_Leaves' UID=user.pk %}>Reset Leaves</a>
-                            {% endif %}   
+                             
                             </td>
                     </tr>
             </tbody>
