--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/payroll_breakdown.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/payroll_breakdown.html
@@ -135,6 +135,13 @@
             </tbody>
         </table>
     </div>
+    <hr>
+    <!--div>
+        <ul class="action-icons">
+            <li><a class="btn btn-danger" href="{% url 'generate_page' UID=user.pk %}" type="button">Cancel</a></li>
+            <li><button class="btn btn-success" type="submit">Confirm</button></li>
+        </ul>
+    </div-->
 </div>
 <footer>
     <div class="footer-wrap">
